hphp/test/quick/closure_recursive_bad.php.expectf

Fatal error: $this is null in %s on line 6
